--- a/jenkinsfile
+++ b/jenkinsfile
@@ -34,6 +34,7 @@ pipeline {
 
         stage('package') {
             steps {
+              sh "whoami"
               sh "sam --version"
                         //  sh 'cd  /home/ec2-user/.linuxbrew/bin/sam'
                           sh' sam package \
